--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
+    font-family: 'Pretendard';
     color: rgb(var(--foreground-rgb));
     background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
@@ -16,6 +17,7 @@ body {
     }
 }
 
+/* Pretendard font 적용 */
 @font-face {
     font-family: 'Pretendard';
     font-weight: 100;
@@ -113,6 +115,7 @@ body {
     font-display: swap;
 }
 
+/* Alert 애니메이션 */
 @keyframes slideInDown {
     from {
         transform: translate3d(0, 30px, 0) scaleY(1);
